Remove more UIkit CSS.  Fix alignment.

--- a/vue/src/styles/base.scss
+++ b/vue/src/styles/base.scss
@@ -141,3 +141,9 @@ input {
   }
 }
 
+/* A flex row of items vertically centered.  */
+.row-centered {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
